abbo-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: abbo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: abbo

kind: Service
apiVersion: v1
metadata:
  name: abbo-nodes-headless
spec:
  clusterIP: None
  selector:
    app: abbo
  ports:
    - name: epmd
      port: 4369

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abbo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: abbo
  template:
    metadata:
      labels:
        app: abbo
    spec:
      containers:
      - name: abbo
        image: askask123/abbo:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
